--- a/WarpNetwork/manifest.json
+++ b/WarpNetwork/manifest.json
@@ -6,7 +6,7 @@
   "UniqueID": "tlitookilakin.warpnetwork",
   "EntryDll": "WarpNetwork.dll",
   "MinimumApiVersion": "3.0.0",
-  "UpdateKeys": [],
+  "UpdateKeys": [ "Nexus:8567" ],
   "Dependencies": [
     {
       "UniqueID": "spacechase0.SpaceCore"
