--- a/WarpNetwork/manifest.json
+++ b/WarpNetwork/manifest.json
@@ -13,7 +13,7 @@
     },
     {
       "UniqueID": "pathoschild.ContentPatcher",
-      "Required":  "false"
+      "IsRequired":  "false"
     }
   ]
 }
