--- a/WarpNetwork/WarpNetwork.csproj
+++ b/WarpNetwork/WarpNetwork.csproj
@@ -8,6 +8,10 @@
     <ProjectGuid>{4775BDED-E362-46C0-948B-6DE9DE926A4D}</ProjectGuid>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <GamePath>C:\Program Files (x86)\Steam\steamapps\common\Stardew Valley</GamePath>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.0.0" />
 	<Reference Include="SpaceCore">
