--- a/WarpNetwork/WarpNetwork.csproj
+++ b/WarpNetwork/WarpNetwork.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="assets\icons\" />
     <Folder Include="Properties\" />
   </ItemGroup>
 </Project>
