--- a/WarpNetwork/WarpNetwork.csproj
+++ b/WarpNetwork/WarpNetwork.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <GamePath>C:\Program Files (x86)\Steam\steamapps\common\Stardew Valley</GamePath>
+    <GamePath>C:\Program Files (x86)\Steam\steamapps\common\STARDEW_CURRENT</GamePath>
   </PropertyGroup>
 
   <ItemGroup>
