--- a/WarpNetwork/manifest.json
+++ b/WarpNetwork/manifest.json
@@ -6,7 +6,7 @@
   "UniqueID": "tlitookilakin.warpnetwork",
   "EntryDll": "WarpNetwork.dll",
   "MinimumApiVersion": "3.14.0",
-  "UpdateKeys": [ "Nexus:8567", "Moddrop:951720" ],
+  "UpdateKeys": [ "Nexus:8567", "Moddrop:951720", "GitHub:tlitookilakin/WarpNetwork" ],
   "Dependencies": [
     {
       "UniqueID": "spacechase0.SpaceCore"
