--- a/WarpNetwork/WarpNetwork.csproj
+++ b/WarpNetwork/WarpNetwork.csproj
@@ -3,22 +3,18 @@
   <PropertyGroup>
     <AssemblyName>WarpNetwork</AssemblyName>
     <RootNamespace>WarpNetwork</RootNamespace>
-    <Version>1.3.3</Version>
-    <TargetFramework>net5.0</TargetFramework>
+    <Version>2.0.0</Version>
+    <TargetFramework>net6.0</TargetFramework>
     <ProjectGuid>{4775BDED-E362-46C0-948B-6DE9DE926A4D}</ProjectGuid>
+	  <EnableHarmony>true</EnableHarmony>
   </PropertyGroup>
 
   <PropertyGroup>
-    <GamePath>C:\Program Files (x86)\Steam\steamapps\common\STARDEW_CURRENT</GamePath>
+    <GamePath>C:\Program Files (x86)\Steam\steamapps\common\Stardew Valley</GamePath>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.0.0" />
-	<Reference Include="AeroCore">
-      <HintPath>$(GamePath)\Mods\AeroCore\AeroCore.dll</HintPath>
-      <CopyLocal>False</CopyLocal>
-      <Private>False</Private>
-    </Reference>
   </ItemGroup>
 
   <ItemGroup>
